<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">
    <TextView
        android:id="@+id/tvEditorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/orange"
        android:layout_margin="20dp"
        android:text="@string/exercise" />

    <EditText
        android:id="@+id/etEditorCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/orange"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/category" />

    <EditText
        android:id="@+id/etEditorTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_margin="10dp"
        android:hint="@string/time_in_min_s"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/etEditorDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:ems="10"
        android:hint="@string/description"
        android:layout_margin="10dp"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnEditorUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onClickBtnEditorUpdate"
        android:text="@string/update" />

    <Button
        android:id="@+id/btnEditorDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/red"
        android:onClick="onClickBtnEditorDelete"
        android:text="@string/delete" />


</LinearLayout>