<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExerciseActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/orange"
        android:layout_margin="20dp"
        android:text="@string/enter_your_exercise" />

    <EditText
        android:id="@+id/etAddExerciseCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/orange"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/category" />

    <EditText
        android:id="@+id/etAddExerciseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_margin="10dp"
        android:hint="@string/time_in_min_s"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/etAddExerciseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:ems="10"
        android:hint="@string/description"
        android:layout_margin="10dp"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnAddExerciseAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onClickBtnAddExerciseAdd"
        android:text="@string/add" />

</LinearLayout>