<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_exercises"
        android:orderInCategory="100"
        android:title="@string/menu_exercises"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        app:showAsAction="ifRoom|collapseActionView|withText" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:orderInCategory="100"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom|collapseActionView|withText" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_baseline_login_24"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom|collapseActionView|withText" />
</menu>